syntax = "proto3";

package chora.example.v1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "google/api/annotations.proto";

option go_package = "github.com/chora-io/mods/example/types/v1";

// Query is the Query service.
service Query {

  // Content queries a content by id.
  rpc Content(QueryContentRequest) returns (QueryContentResponse) {
    option (google.api.http).get = "/chora/content/v1/content/{id}";
  }

  // Contents queries all contents.
  rpc Contents(QueryContentsRequest) returns (QueryContentsResponse) {
    option (google.api.http).get = "/chora/content/v1/contents";
  }

  // ContentsByCurator queries contents by curator.
  rpc ContentsByCurator(QueryContentsByCuratorRequest)
      returns (QueryContentsByCuratorResponse) {
    option (google.api.http).get =
        "/chora/content/v1/contents-by-curator/{curator}";
  }
}

// QueryContentRequest is the Query/Content request type.
message QueryContentRequest {

  // id is the unique identifier of the content.
  uint64 id = 1;
}

// QueryContentResponse is the Query/Content response type.
message QueryContentResponse {

  // id is the unique identifier of the content.
  uint64 id = 1;

  // curator is the address of the content curator.
  string curator = 2;

  // metadata is the metadata of the content.
  string metadata = 3;
}

// QueryContentsRequest is the Query/Contents request type.
message QueryContentsRequest {

  // pagination is the optional pagination of the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryContentsResponse is the Query/Contents response type.
message QueryContentsResponse {

  // contents is the list of contents.
  repeated Content contents = 1;

  // pagination is the pagination of the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 3;

  // Content is the content properties.
  message Content {

    // id is the unique identifier of the content.
    uint64 id = 1;

    // curator is the address of the content curator.
    string curator = 2;

    // metadata is the metadata of the content.
    string metadata = 3;
  }
}

// QueryContentsByCuratorRequest is the Query/ContentsByCurator request type.
message QueryContentsByCuratorRequest {

  // curator is the address of the content curator.
  string curator = 1;

  // pagination is the optional pagination of the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryContentsByCuratorResponse is the Query/ContentsByCurator response type.
message QueryContentsByCuratorResponse {

  // curator is the address of the content curator.
  string curator = 1;

  // contents is the list of contents managed by the curator.
  repeated Content contents = 2;

  // pagination is the pagination of the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 3;

  // Content is the content properties.
  message Content {

    // id is the unique identifier of the content.
    uint64 id = 1;

    // metadata is the metadata of the content.
    string metadata = 2;
  }
}
